# ical-aggregator

./: Cargo.toml  README.md  config.toml.example  index.html
aggregator/: Cargo.toml  README.md  config.toml.example
aggregator/src/: main.rs
src/: main.rs
web/: components.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Calendar.tsx  EventDialog.tsx  event-calendar-demo.tsx  event-calendar-toolbar.tsx  event-calendar.tsx
web/src/components/ui/: event-calendar-container.tsx  event-calendar-views.tsx
